--- a/admin/app/views/spree/admin/customer_returns/_return_item_selection.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/_return_item_selection.html.erb
@@ -1,6 +1,6 @@
-<div class="table-responsive card-lg p-0">
-  <table class="table table-condensed">
-    <thead class="text-muted">
+<div class="table-responsive bg-white rounded-lg">
+  <table class="table">
+    <thead class="border-bottom">
       <tr>
         <th>
           <div class="custom-control custom-checkbox ml-1">
