--- a/admin/app/views/spree/admin/orders/_customer_returns.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer_returns.html.erb
@@ -12,7 +12,6 @@
               <th><%= Spree.t(:date) %></th>
               <th><%= Spree.t(:status) %></th>
               <th><%= Spree.t(:pre_tax_total) %></th>
-              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -22,7 +21,19 @@
                 data-controller="row-link"
                 class="cursor-pointer"
               >
-                <td data-action="click->row-link#openLink" class="font-weight-bolder"><%= customer_return.number %></td>
+                <td data-action="click->row-link#openLink" class="font-weight-bolder">
+                  <%= link_to customer_return.number,
+                  (
+                    if can?(:edit, customer_return)
+                      edit_admin_order_customer_return_path(@order, customer_return)
+                    else
+                      "#"
+                    end
+                  ),
+                  data: {
+                    row_link_target: "link",
+                  } %>
+                </td>
                 <td data-action="click->row-link#openLink">
                   <% if customer_return.fully_reimbursed? %>
                     <span class="badge badge-success"><%= Spree.t(:reimbursed) %></span>
@@ -32,22 +43,6 @@
                 </td>
                 <td data-action="click->row-link#openLink"><%= customer_return.display_pre_tax_total.to_html %></td>
                 <td data-action="click->row-link#openLink"><%= pretty_time(customer_return.created_at) %></td>
-
-                <td class="actions">
-                  <span class="d-flex justify-content-end">
-                    <%= if can?(:edit, customer_return)
-                      link_to_edit(
-                        customer_return,
-                        no_text: true,
-                        class: "btn btn-light btn-sm",
-                        url: edit_admin_order_customer_return_path(@order, customer_return),
-                        data: {
-                          row_link_target: "link",
-                        },
-                      )
-                    end %>
-                  </span>
-                </td>
               </tr>
             <% end %>
           </tbody>
