--- a/storefront/app/views/themes/default/spree/page_sections/_footer.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_footer.html.erb
@@ -50,9 +50,12 @@
       </div>
     </div>
     <div class="text-sm" style="color: <%= section.preferred_copyright_text_color %>; background-color: <%= section.preferred_copyright_background_color %>">
-      <div class='page-container py-2 flex justify-center'>
+      <div class='page-container py-2 flex justify-center gap-2'>
         <span>© <%= Time.now.year %>
         <a href='/'><%= current_store.name %></a>. <%= Spree.t(:all_rights_reserved) %>.</span>
+        <span>
+          Powered by <a href='https://spreecommerce.org' target="_blank" rel="follow" class="underline">Spree Commerce</a>
+        </span>
       </div>
     </div>
   </footer>
