--- a/admin/app/views/spree/admin/customer_returns/_return_item_decision.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/_return_item_decision.html.erb
@@ -1,47 +1,54 @@
-<div class="table-responsive card-lg p-0 mb-4">
-  <table class="show return-items-table table table-condensed index">
-    <thead class="text-muted">
+<table class="show return-items-table table table-condensed index">
+  <thead class="text-muted">
+    <tr>
+      <th><%= Spree.t(:product) %></th>
+      <th><%= Spree.t(:pre_tax_amount) %></th>
+      <th><%= Spree.t(:preferred_reimbursement_type) %></th>
+      <th><%= Spree.t(:exchange_for) %></th>
+      <th><%= Spree.t(:acceptance_errors) %></th>
+      <% if show_decision %>
+        <th></th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% return_items.each do |return_item| %>
       <tr>
-        <th><%= Spree.t(:product) %></th>
-        <th><%= Spree.t(:pre_tax_amount) %></th>
-        <th><%= Spree.t(:preferred_reimbursement_type) %></th>
-        <th><%= Spree.t(:exchange_for) %></th>
-        <th><%= Spree.t(:acceptance_errors) %></th>
+        <td>
+          <%= if return_item.inventory_unit
+            render "spree/admin/variants/variant",
+            variant: return_item.inventory_unit.variant
+          end %>
+        </td>
+        <td>
+          <%= return_item.display_pre_tax_amount %>
+        </td>
+        <td>
+          <%= reimbursement_type_name(return_item.preferred_reimbursement_type) %>
+        </td>
+        <td>
+          <%= return_item.exchange_variant.try(:exchange_name) %>
+        </td>
+        <td>
+          <%= if return_item.acceptance_status_errors.present?
+            return_item.acceptance_status_errors
+          end %>
+        </td>
         <% if show_decision %>
-          <th></th>
-        <% end %>
-      </tr>
-    </thead>
-    <tbody>
-      <% return_items.each do |return_item| %>
-        <tr>
-          <td>
-            <%= render 'spree/admin/variants/variant', variant: return_item.inventory_unit.variant if return_item.inventory_unit %>
-          </td>
-          <td>
-            <%= return_item.display_pre_tax_amount %>
-          </td>
-          <td>
-            <%= reimbursement_type_name(return_item.preferred_reimbursement_type) %>
-          </td>
-          <td>
-            <%= return_item.exchange_variant.try(:exchange_name) %>
-          </td>
-          <td>
-            <%= return_item.acceptance_status_errors if return_item.acceptance_status_errors.present? %>
-          </td>
-          <% if show_decision %>
-            <td class='actions'>
+          <td class='actions'>
+            <% if can?(:accept, return_item) %>
               <%= button_to [:admin, return_item], { class: 'with-tip display-inline btn btn-primary btn-sm', params: { "return_item[acceptance_status]" => 'accepted' }, "data-action" => 'save', title: Spree.t(:accept), method: 'put' } do %>
                 <%= Spree.t(:accept) %>
-              <% end if can?(:accept, return_item) %>
+              <% end %>
+            <% end %>
+            <% if can?(:reject, return_item) %>
               <%= button_to [:admin, return_item], { class: 'with-tip display-inline btn btn-danger btn-sm', params: { "return_item[acceptance_status]" => 'rejected' }, "data-action" => 'remove', title: Spree.t('actions.reject'), method: 'put' } do %>
-                <%= Spree.t('actions.reject') %>
-              <% end if can?(:reject, return_item) %>
-            </td>
-          <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+                <%= Spree.t("actions.reject") %>
+              <% end %>
+            <% end %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
