--- a/storefront/app/views/themes/default/spree/page_sections/_post_grid.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_post_grid.html.erb
@@ -1,11 +1,11 @@
 <div style="<%= section_styles(section) %>">
   <% if @posts.any? %>
     <div class="page-container">
-      <%= turbo_frame_tag :posts, class: 'flex flex-col' do %>
-        <%= render partial: 'spree/posts/post', collection: @posts %>
-      <% end %>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-4 auto-rows-fr">
+        <%= render partial: 'spree/posts/post', collection: @posts, cached: true %>
+      </div>
 
-      <%= render 'spree/posts/pagination' %>
+      <%= paginate @posts, theme: 'storefront', outer_window: 1, inner_window: 2 %>
     </div>
   <% end %>
 </div>
