--- a/storefront/app/views/themes/default/spree/posts/_post.html.erb
+++ b/storefront/app/views/themes/default/spree/posts/_post.html.erb
@@ -1,8 +1,10 @@
-<div class="flex flex-col max-w-3xl m-auto mt-16 first:mt-0">
-  <%= link_to spree.post_path(post), data: { turbo_frame: '_top' } do %>
-    <% if post.image.attached? && post.image.variable? %>
-      <%= image_tag main_app.cdn_image_url(post.image.variant(spree_image_variant_options(resize_to_fit: [nil, 800]))), height: 400, class: 'h-full w-full object-cover object-center', loading: :lazy, alt: post.title %>
-    <% end %>
+<div id="<%= dom_id(post) %>">
+  <%= link_to spree.post_path(post), class: 'block hover:opacity-70 transition-opacity' do %>
+    <div class="h-[200px] w-full bg-gray-100">
+      <% if post.image.attached? && post.image.variable? %>
+        <%= image_tag main_app.cdn_image_url(post.image.variant(spree_image_variant_options(resize_to_fit: [nil, 800]))), height: 400, class: 'h-full w-full object-cover object-center', loading: :lazy, alt: post.title %>
+      <% end %>
+    </div>
 
     <h1 class="uppercase text-lg font-medium mt-4"><%= post.title %></h1>
     <div class="mt-2 text-sm"><%= local_time(post.published_at, '%B %e, %Y') %></div>
