Fix multi search on the orders admin page

--- a/admin/app/views/spree/admin/orders/_filters.html.erb
+++ b/admin/app/views/spree/admin/orders/_filters.html.erb
@@ -11,7 +11,7 @@
   <%= hidden_field_tag :frame_name, frame_name if frame_name.present? %>
 
   <div class="d-flex flex-column flex-lg-row gap-2">
-    <%= render 'spree/admin/shared/filters_search_bar', param: :multisearch %>
+    <%= render 'spree/admin/shared/filters_search_bar', param: :multi_search %>
 
     <div class="d-flex align-items-center justify-content-between">
       <div class="mr-2 h-100">
