--- a/storefront/app/views/themes/default/spree/shared/icons/_close.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/icons/_close.html.erb
@@ -1,5 +1,3 @@
-<% color ||= 'black' %>
-
 <svg
   xmlns='http://www.w3.org/2000/svg'
   width='24'
@@ -7,5 +5,5 @@
   viewBox='0 0 24 24'
   fill='none'
 >
-  <path d="M3.00029 3L21 20.9688M3 21L20.9997 3.03115" stroke="<%= color %>" stroke-width="1.5"/>
+  <path d="M3.00029 3L21 20.9688M3 21L20.9997 3.03115" stroke="currentColor" stroke-width="1.5"/>
 </svg>
