--- a/storefront/app/views/themes/default/spree/shared/icons/_search.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/icons/_search.html.erb
@@ -1,5 +1,3 @@
-<% color ||= 'currentColor' %>
-
 <svg
   xmlns='http://www.w3.org/2000/svg'
   width='24'
@@ -10,10 +8,10 @@
     cx="10.5"
     cy="10.5"
     r="8.75"
-    stroke="<%= color %>"
+    stroke="currentColor"
     stroke-width="1.5" />
   <path
     d="M23 23L17 17"
-    stroke="<%= color %>"
+    stroke="currentColor"
     stroke-width="1.5" />
 </svg>
