--- a/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
@@ -23,7 +23,7 @@
       <% end %>
       <span class='text-xl font-medium uppercase leading-loose'><%= Spree.t(:cart) %></span>
       <span class='relative block w-6'>
-        <%= render 'spree/shared/icons/cart', color: theme_setting('text_color') %>
+        <%= render 'spree/shared/icons/cart' %>
         <span class='cart-counter w-full text-[8px] font-extrabold absolute top-[10px] text-center'>
           <%= current_order.item_count if current_order.present? && current_order.item_count.to_i > 0 %>
         </span>
