--- a/storefront/app/views/themes/default/spree/shared/icons/_menu.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/icons/_menu.html.erb
@@ -1,5 +1,3 @@
-<% color ||= theme_setting('text_color') %>
-
 <svg
   xmlns='http://www.w3.org/2000/svg'
   width='24'
@@ -7,6 +5,6 @@
   viewBox='0 0 24 24'
   fill='none'
 >
-  <path d="M0 6H24" stroke="<%= color %>" stroke-width="1.5"/>
-  <path d="M0 18H24" stroke="<%= color %>" stroke-width="1.5"/>
+  <path d="M0 6H24" stroke="currentColor" stroke-width="1.5"/>
+  <path d="M0 18H24" stroke="currentColor" stroke-width="1.5"/>
 </svg>
