--- a/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
@@ -1,6 +1,6 @@
 <% settings_active = %w[stores zones shipping_methods oauth_applications
                         payment_methods refund_reasons reimbursement_types
-                        return_authorizations shipping_categories store_credit_categories
+                        shipping_categories store_credit_categories
                         syncs tax_categories tax_rates webhooks accounts
                         custom_domains audits exports imports return_authorization_reasons
                         documents stripe_tax_registrations members subscriptions stock_locations webhooks_subscribers].include?(controller_name) %>
