--- a/admin/app/views/spree/admin/orders/customer_returns/_return_item_selection.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/_return_item_selection.html.erb
@@ -8,7 +8,7 @@
               type="checkbox"
               class="custom-control-input"
               id="checkAllMasterCheckbox"
-              data-return-items-target="checkboxAll"
+              data-checkbox-select-all-target="checkboxAll"
             >
             <label class="custom-control-label" for="checkAllMasterCheckbox"><span></span></label>
           </div>
@@ -35,7 +35,7 @@
                                       checked: false,
                                       class: "add-item custom-control-input",
                                       data: {
-                                        return_items_target: "checkbox",
+                                        checkbox_select_all_target: "checkbox",
                                         price: return_item.pre_tax_amount,
                                       },
                                     },
