--- a/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
@@ -106,7 +106,7 @@
   </div>
 <% end %>
 
-<div class="card">
+<div class="card mb-4">
   <div class="card-header">
     <h5><%= plural_resource_name(Spree::Reimbursement) %></h5>
   </div>
