--- a/admin/app/views/spree/admin/shared/_payment.html.erb
+++ b/admin/app/views/spree/admin/shared/_payment.html.erb
@@ -23,7 +23,7 @@
         <% if payment.try(:gateway_dashboard_payment_url).present? %>
           <%= link_to_with_icon 'eye', Spree.t(:details), payment.gateway_dashboard_payment_url, class: 'dropdown-item', target: '_blank' %>
         <% end %>
-        <% if payment.source.is_a?(Spree::StoreCredit) && payment.source.gift_card %>
+        <% if payment.source.is_a?(Spree::StoreCredit) && payment.source.respond_to?(:gift_card) && payment.source.gift_card.present? %>
           <%= link_to_with_icon 'eye', Spree.t(:details), spree.edit_admin_gift_card_path(payment.source.gift_card), class: 'dropdown-item' %>
         <% end %>
 
