--- a/admin/app/views/spree/admin/customer_returns/index.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %>
-  <%= Spree.t(:returns) %>
+  <%= Spree.t(:customer_returns) %>
 <% end %>
 
 <% content_for :page_title do %>
-  <%= Spree.t(:returns) %>
+  <%= Spree.t(:customer_returns) %>
 <% end %>
 <div class="card-lg p-0">
 
