--- a/admin/app/views/spree/admin/reimbursements/edit.html.erb
+++ b/admin/app/views/spree/admin/reimbursements/edit.html.erb
@@ -97,7 +97,7 @@ locals: {
   </div>
   <div class="card-body p-0">
     <table class="table table-condensed">
-      <thead data-hook="customer_return_header">
+      <thead>
         <tr>
           <th><%= Spree.t(:reimbursement_type) %></th>
           <th><%= Spree.t(:description) %></th>
