--- a/admin/app/views/spree/admin/payments/new.html.erb
+++ b/admin/app/views/spree/admin/payments/new.html.erb
@@ -14,8 +14,8 @@
             <%= f.label :amount, Spree.t(:amount) %>
             <div class="input-group">
               <%= f.number_field :amount,
-                value: @payment_max_amount,
-                max: @payment_max_amount,
+                value: @payment.max_amount,
+                max: @payment.max_amount,
                 step: '.01',
                 class: 'form-control',
                 required: true %>
