--- a/admin/app/views/spree/admin/customer_returns/index.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.erb
@@ -37,16 +37,7 @@
       </table>
     </div>
   <% else %>
-    <div
-      class="
-        text-muted p-5 d-flex align-items-center w-100 justify-content-center
-      "
-    >
-      <%= Spree.t(
-        :no_resource_found,
-        resource: plural_resource_name(Spree::CustomerReturn),
-      ) %>.
-    </div>
+  <%= render "spree/admin/shared/no_resource_found" %>
   <% end %>
 
   <%= render partial: "spree/admin/shared/index_table_options",
