--- a/admin/app/views/spree/admin/orders/_customer_returns.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer_returns.html.erb
@@ -25,7 +25,7 @@
                   <%= link_to customer_return.number,
                   (
                     if can?(:edit, customer_return)
-                      edit_admin_order_customer_return_path(@order, customer_return)
+                      spree.edit_admin_order_customer_return_path(@order, customer_return)
                     else
                       "#"
                     end
