--- a/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
+++ b/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
@@ -26,9 +26,9 @@
                   <%= link_to return_authorization.number,
                   (
                     if can?(:edit, return_authorization)
-                      edit_admin_order_return_authorization_path(@order, return_authorization)
+                      spree.edit_admin_order_return_authorization_path(@order, return_authorization)
                     else
-                      admin_order_return_authorization_path(@order, return_authorization)
+                      spree.admin_order_return_authorization_path(@order, return_authorization)
                     end
                   ),
                   data: {
