--- a/admin/app/views/spree/admin/orders/_header.html.erb
+++ b/admin/app/views/spree/admin/orders/_header.html.erb
@@ -45,16 +45,14 @@
       <div class="dropdown-divider"></div>
 
       <% if can_create_ra %>
-        <%= button_link_to Spree.t(:new_return_authorization),
+        <%= link_to_with_icon "plus", Spree.t(:new_return_authorization),
         spree.new_admin_order_return_authorization_path(@order),
-        class: "btn dropdown-item",
-        icon: "add.svg" %>
+        class: "btn dropdown-item" %>
       <% end %>
 
       <% if can_create_cr  && controller_name != "customer_returns" %>
-        <%= button_link_to Spree.t(:new_customer_return),
+        <%= link_to_with_icon "plus", Spree.t(:new_customer_return),
         spree.new_admin_order_customer_return_path(@order),
-        icon: "plus",
         class: "btn dropdown-item" %>
       <% end %>
 
