--- a/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
+++ b/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
@@ -41,7 +41,7 @@
                   </small>
                 </td>
                 <td data-action="click->row-link#openLink"><%= return_authorization.display_pre_tax_total.to_html %></td>
-                <td data-action="click->row-link#openLink"><%= pretty_time(return_authorization.created_at) %></td>
+                <td data-action="click->row-link#openLink"><%= local_time(return_authorization.created_at) %></td>
               </tr>
             <% end %>
           </tbody>
